<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:paddingHorizontal="15dp"
    android:background="@color/backgroundColor"
    android:gravity="center">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/ic_finish_order"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_black"
        android:textSize="@dimen/text_large"
        android:letterSpacing="0.05"
        android:textColor="@color/textPrimary"
        android:text="@string/finish_order_title"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/roboto"
        android:textSize="@dimen/text_normal"
        android:textColor="@color/textTertiary"
        android:text="@string/finish_order_label"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOrderDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_confirm"
            android:textAllCaps="false"
            android:textColor="@color/colorOnPrimary"
            android:elevation="0dp"
            android:textSize="16sp"
            android:letterSpacing="0.04"
            android:text="@string/finish_order_button_main"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continueBuy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elevation="0dp"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:letterSpacing="0.04"
            android:background="@drawable/bg_button_secundary"
            android:text="@string/finish_order_secondary_button"/>

    </LinearLayout>

</LinearLayout>