<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/backgroundColor"
        app:elevation="4dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/backgroundColor"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:scrimVisibleHeightTrigger="0dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:gravity="bottom">

                <TextView
                    android:id="@+id/categoryTitle"
                    android:layout_width="386dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:letterSpacing="0.02"
                    android:text="-----"
                    android:textColor="@color/textPrimary"
                    android:textSize="@dimen/text_extra_large"
                    app:layout_collapseMode="parallax" />

            </FrameLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="3dp"
                    android:background="@drawable/bg_divisor_bottom">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingHorizontal="10dp"
                        android:gravity="center_vertical|center_horizontal"
                        android:background="@drawable/bg_divisor_right"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/roboto_bold"
                            android:textColor="@color/colorSuccess"
                            android:textSize="12sp"
                            android:text="@string/poggers"/>

                        <Switch
                            android:id="@+id/poggersFilter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:thumb="@drawable/bg_switch_thumb"
                            android:track="@drawable/bg_switch"
                            android:showText="false"
                            android:paddingHorizontal="10dp"
                            android:scaleY="1.5"
                            android:scaleX="1.5"
                            tools:ignore="UseSwitchCompatOrMaterialXml" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <HorizontalScrollView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fillViewport="true"
                            android:scrollbars="none">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingHorizontal="10dp"
                                android:orientation="horizontal">

                                <androidx.appcompat.widget.AppCompatButton
                                    android:id="@+id/filterHigh"
                                    style="@style/itemFilterButton"
                                    android:text="@string/more_expensive" />

                                <androidx.appcompat.widget.AppCompatButton
                                    android:id="@+id/filterLow"
                                    style="@style/itemFilterButton"
                                    android:text="@string/cheaper" />
                            </LinearLayout>

                        </HorizontalScrollView>
                    </LinearLayout>

                </LinearLayout>

            </HorizontalScrollView>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/categoryContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategory"
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_product_match_parent" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
